# pp-pipe-dt

./: .gitignore  CLAUDE.md  README.md  REVISION_NOTES.md  abstract.tex  agent_c_framing.tex  agent_d_benchmarks.tex  env.example  professor_metrics.txt  pyproject.toml  ruff.toml
.atl/: skill-registry.md
data/: .gitignore
docs/: PAPER_NOTES.md
files/: S0191261509000484.html  S0191261511001676.html
manuscript/: Pipe-DT.bib  manuscript.aux  manuscript.bak0  manuscript.bak1  manuscript.bak10  manuscript.bak11  manuscript.bak12  manuscript.bak13  manuscript.bak14  manuscript.bak15  manuscript.bak16  manuscript.bak17  manuscript.bak18  manuscript.bak19  manuscript.bak2  manuscript.bak20  manuscript.bak21  manuscript.bak3  manuscript.bak4  manuscript.bak5  manuscript.bak6  manuscript.bak7  manuscript.bak8  manuscript.bak9  manuscript.fdb_latexmk  manuscript.fls  manuscript.tex  manuscript_es.aux  manuscript_es.bak0  manuscript_es.bak1  manuscript_es.bak10  manuscript_es.bak2  manuscript_es.bak3  manuscript_es.bak4  manuscript_es.bak5  manuscript_es.bak6  manuscript_es.bak7  manuscript_es.bak8  manuscript_es.bak9  manuscript_es.fdb_latexmk  (+2 more)
references files/: 2502.html  2601.html  S0167739X26000130.html  S1877050925008075.html  S2185556024000178.html  tdag005.html
scripts/: analyze.py  analyze_longitudinal.py  collect.py  download_longitudinal.py  generate_pr_curve.py  import_historical.py  ingest_longitudinal.py  install-timer.sh
src/pipeline/: __init__.py
systemd/: gtfs-collector.service  gtfs-collector.timer
tests/: conftest.py  test_parser.py  test_storage.py
(+19 files in other folders)
